argo_manfist/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ivolve-app-svc
  namespace: ivolve
spec:
  selector:
    app: ivolve
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
